--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: 'courtney's training repo'
+site_name: 'courtney training repo'
 site_description: 'learning how to use github'
 site_author: Courtney King
 site_url: https://cu-esiil.github.io/training
